--- a/LocalitiesManager.Api/LocalitiesManager.Api.csproj
+++ b/LocalitiesManager.Api/LocalitiesManager.Api.csproj
@@ -4,23 +4,34 @@
         <TargetFramework>net7.0</TargetFramework>
         <Nullable>disable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
-        <AssemblyName>TelegramBotTest</AssemblyName>
+        <PackageId>LocalitiesManager.Api</PackageId>
+        <Authors>LocalitiesManager.Api</Authors>
+        <Company>LocalitiesManager.Api</Company>
+        <Product>LocalitiesManager.Api</Product>
     </PropertyGroup>
 
-    <PropertyGroup Condition=" '$(RunConfiguration)' == 'LocalitiesManagerLocal' "/>
-    <PropertyGroup Condition=" '$(RunConfiguration)' == 'LocalitiesManagerProduction' "/>
+    <PropertyGroup Condition=" '$(RunConfiguration)' == 'LocalitiesManagerLocal' " />
+    <PropertyGroup Condition=" '$(RunConfiguration)' == 'LocalitiesManagerProduction' " />
     <ItemGroup>
-        <None Remove="Configuration\"/>
-        <None Remove="Swashbuckle.AspNetCore"/>
-        <None Remove="Extensions\"/>
-        <None Remove="Helpers\"/>
+        <None Remove="Configuration\" />
+        <None Remove="Swashbuckle.AspNetCore" />
+        <None Remove="Extensions\" />
+        <None Remove="Helpers\" />
     </ItemGroup>
     <ItemGroup>
-        <Folder Include="Configuration\"/>
-        <Folder Include="Extensions\"/>
-        <Folder Include="Helpers\"/>
+        <Folder Include="Configuration\" />
+        <Folder Include="Controllers\" />
+        <Folder Include="Extensions\" />
+        <Folder Include="Helpers\" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.10">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\LocalitiesManager.Data\LocalitiesManager.Data.csproj" />
     </ItemGroup>
 </Project>
