--- a/LocalitiesManager.Api/LocalitiesManager.Api.csproj
+++ b/LocalitiesManager.Api/LocalitiesManager.Api.csproj
@@ -21,8 +21,6 @@
     <ItemGroup>
         <Folder Include="Configuration\" />
         <Folder Include="Controllers\" />
-        <Folder Include="Extensions\" />
-        <Folder Include="Helpers\" />
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.10">
@@ -33,5 +31,6 @@
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\LocalitiesManager.Data\LocalitiesManager.Data.csproj" />
+      <ProjectReference Include="..\LocalitiesManager.Shared\LocalitiesManager.Shared.csproj" />
     </ItemGroup>
 </Project>
