--- a/LocalitiesManager.Api/LocalitiesManager.Api.csproj
+++ b/LocalitiesManager.Api/LocalitiesManager.Api.csproj
@@ -20,9 +20,10 @@
     </ItemGroup>
     <ItemGroup>
         <Folder Include="Configuration\" />
-        <Folder Include="Controllers\" />
     </ItemGroup>
     <ItemGroup>
+        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+        <PackageReference Include="MediatR" Version="12.1.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.10">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -30,6 +31,7 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     </ItemGroup>
     <ItemGroup>
+      <ProjectReference Include="..\LocalitiesManager.CommandsQueries\LocalitiesManager.CommandsQueries.csproj" />
       <ProjectReference Include="..\LocalitiesManager.Data\LocalitiesManager.Data.csproj" />
       <ProjectReference Include="..\LocalitiesManager.Shared\LocalitiesManager.Shared.csproj" />
     </ItemGroup>
